<?xml version="1.0"?>
<package format="2">
  <name>ipcamera</name>
  <version>0.0.0</version>
  <description>The ipcamera package</description>
  <maintainer email="grasper@todo.todo">grasper</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
